# pocket-rag

./: .gitignore  README.md  _temp_.sqlite3  main.py  pyproject.toml  rye-setup.md  sample.py  setup.sh  split_result.json  test.py
src/pocket_rag/: __init__.py  database.py  embedding.py  gpt.py  markdown_to_tree.py  prompt_templates.py
tests/: test_project_search_document.py  test_rag_project.py
